kubernetes/clusters/live/.network-policies/allow-ingress-from-external/source/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-from-external
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: ingress-nginx-external-app
      app.kubernetes.io/name: ingress-nginx
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              networking/allow-ingress-to-external-nginx: "true"
